<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/settings"
		android:icon="@drawable/settings_icon"
		android:title="@string/settings_label">		
		<menu>
			<item android:id="@+id/settings_comm"
				android:title="@string/settings_comm_label" />			
			<item android:id="@+id/settings_audio"
				android:title="@string/settings_audio_label" />
			<item android:id="@+id/settings_reset_all"
				android:title="@string/settings_reset_all_label" />				
		</menu>		
	</item>
	<item android:id="@+id/groups"
		android:icon="@drawable/groups_icon"
		android:title="@string/groups_label">
		<menu>
			<item android:id="@+id/groups_create"
				android:title="@string/groups_create_label" />			
			<item android:id="@+id/groups_view"
				android:title="@string/groups_view_label" />		
		</menu>		
	</item>
</menu>
